# bedsheet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE.md  PROJECT_STATUS.md  README.md  SESSION_HANDOFF.md  SESSION_HANDOFF_2025-12-18.md  SESSION_HANDOFF_2026-01-26.md  SESSION_HANDOFF_2026-02-10.md  SESSION_HANDOFF_2026-02-20.md  SESSION_HANDOFF_2026-03-29.md  SESSION_HANDOFF_2026-04-10.md  SESSION_HANDOFF_2026-04-16.md  SESSION_SUMMARY_2025-12-18.md  SUPPLEMENTAL_TERMS.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
bedsheet/: __init__.py  __main__.py  action_group.py  agent.py  events.py  exceptions.py  recording.py  supervisor.py  testing.py
bedsheet/cli/: README.md  __init__.py  main.py
bedsheet/deploy/: README.md  __init__.py  code_transformer.py  config.py  introspect.py  source_extractor.py
bedsheet/deploy/targets/: __init__.py  agentcore.py  aws.py  aws_terraform.py  base.py  gcp.py  local.py
bedsheet/deploy/templates/: __init__.py
bedsheet/deploy/templates/agentcore/: Makefile.j2  env.example.j2  main.tf.j2  outputs.tf.j2  pyproject.toml.j2  terraform.tfvars.example.j2  variables.tf.j2
bedsheet/deploy/templates/aws/: Makefile.j2  __init__.py  cdk_app.py.j2  cdk_json.j2  cdk_stack.py.j2  env.example.j2  github_workflows_ci.yaml.j2  github_workflows_deploy.yaml.j2  lambda_handler.py.j2  lambda_requirements.txt.j2  openapi.yaml.j2  pyproject.toml.j2  requirements.txt.j2  stacks_init.py.j2
bedsheet/deploy/templates/aws-terraform/: Makefile.j2  lambda_handler.py.j2  lambda_requirements.txt.j2  main.tf.j2  openapi.yaml.j2  outputs.tf.j2  pyproject.toml.j2  terraform.tfvars.example.j2  variables.tf.j2
bedsheet/deploy/templates/gcp/: DEPLOYMENT_GUIDE.md.j2  Dockerfile.j2  Makefile.j2  __init__.py  __init__.py.j2  agent.py.j2  cloudbuild.yaml.j2  env.example.j2  github_workflows_ci.yaml.j2  github_workflows_deploy.yaml.j2  main.tf.j2  outputs.tf.j2  pyproject.toml.j2  requirements.txt.j2  terraform.tfvars.example.j2  variables.tf.j2
bedsheet/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py
bedsheet/memory/: __init__.py  base.py  in_memory.py  redis.py
bedsheet/sense/: __init__.py  factory.py  mixin.py  network.py  protocol.py  pubnub_transport.py  serialization.py  signals.py
docs/: DEMO_RECORDING_PLAN.md  agent-sentinel-dashboard.html  agent-sentinel-guide.html  agent-sentinel-security-architecture.drawio  agent-sentinel-security-architecture.html  agent-sentinel-setup.html  deployment-guide.html  gcp-deployment-deep-dive.html  gcp-deployment-deep-dive.md  gcp-deployment-research.md  multi-agent-guide.html  multi-agent-guide.md  multi-agent-patterns.html  multi-agent-patterns.md  pr-4-fixes-explained.md  sentinel-network-guide.html  sentinel-presenter-guide.html  sentinel-presenter.html  sixth-sense-design.html  sixth-sense-guide.html  sixth-sense-internals.html  strands-advanced-patterns.md  technical-guide.html  technical-guide.md  user-guide.html  user-guide.md
docs/internal/: v04-technical-reference.html
docs/plans/: 2026-02-24-annotated-schema-design.md  2026-02-24-annotated-schema-plan.md  2026-03-12-llm-recording-replay-design.md  2026-03-12-llm-recording-replay-plan.md  nats-transport-architecture.md
docs/superpowers/plans/: 2026-04-14-sentinel-presenter-movie-mode.md
docs/superpowers/specs/: 2026-04-14-sentinel-presenter-movie-mode-design.md  2026-04-18-war-narrator-design.md
examples/: bedsheet.yaml  config_usage.py  investment_advisor.py
examples/agent-sentinel/: README.md  bedsheet.yaml  pyproject.toml  run.py  start.sh
examples/agent-sentinel/agents/: behavior_sentinel.py  gateway_client.py  scheduler.py  sentinel_commander.py  skill_acquirer.py  supply_chain_sentinel.py  web_researcher.py
examples/agent-sentinel/clawhub/: data_exfiltrator.py  registry.json  sentiment_analyzer.py  weather_lookup.py
examples/agent-sentinel/data/: .gitignore  activity_log.jsonl  calendar.json
examples/agent-sentinel/middleware/: action_gateway.py
examples/agent-sentinel/recordings/: behavior-sentinel.jsonl  scheduler.jsonl  sentinel-commander.jsonl  skill-acquirer.jsonl  supply-chain-sentinel.jsonl  web-researcher.jsonl
examples/cloud-monitor/: README.md  pyproject.toml  run.py
examples/cloud-monitor/agents/: cpu_watcher.py  incident_commander.py  log_analyzer.py  memory_watcher.py  security_scanner.py
examples/investment-advisor/: agents.py  bedsheet.yaml  main.py  pyproject.toml  requirements.txt
examples/investment-advisor/deploy/gcp/: .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  cloudbuild.yaml  pyproject.toml
examples/investment-advisor/deploy/gcp/.github/workflows/: ci.yaml  deploy.yaml
examples/investment-advisor/deploy/gcp/agent/: __init__.py  agent.py
examples/investment-advisor/deploy/gcp/terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
examples/investment-advisor/deploy/local/: .env.example  Dockerfile  Makefile  app.py  docker-compose.yaml  pyproject.toml
examples/investment-advisor/deploy/local/debug-ui/: package.json  vite.config.js
examples/sentinel-gcp/: bedsheet.yaml  pyproject.toml
examples/sentinel-gcp/agents/: __init__.py  assistant.py  commander.py  sentinels.py  workers.py
manual-test/: bedsheet.yaml
tests/: test_action_gateway.py  test_action_group.py  test_agent.py  test_code_transformer.py  test_deploy_config.py  test_deploy_targets.py  test_deploy_targets_agentcore.py  test_deploy_targets_aws.py  test_deploy_targets_gcp.py  test_events.py  test_exceptions.py  test_gemini.py  test_introspect.py  test_llm_anthropic.py  test_llm_base.py  test_llm_factory.py  test_memory_base.py  test_memory_in_memory.py  test_memory_redis.py  test_public_api.py  test_recording.py  test_sense.py  test_sense_factory.py  test_source_extractor.py  test_source_extractor_constants.py  test_streaming.py  test_structured_outputs.py  test_supervisor.py  test_testing.py
tests/fixtures/: future_annotated_action.py
tests/integration/: __init__.py  test_real_agent.py
(+49 files in other folders)
