[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedsheet"
version = "0.4.8"
description = "Pythonic framework for AI agents. Build single agents or multi-agent teams with streaming events, parallel execution, and full observability."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Elastic License 2.0" }
authors = [
    { name = "Sivan Grunberg", email = "sivan@vitakka.co" }
]
keywords = [
    "agents",
    "llm",
    "ai",
    "orchestration",
    "multi-agent",
    "anthropic",
    "claude",
    "bedrock",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.39.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
]
deploy = [
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
]
gcp = [
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    # agent-starter-pack will be added when available
]
aws = [
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    # aws-cdk-lib will be added for AWS target
]
demo = [
    "yfinance>=0.2.40",
    "ddgs>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "redis>=5.0.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "yfinance>=0.2.40",
    "ddgs>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/sivang/bedsheet"
Documentation = "https://github.com/sivang/bedsheet#readme"
Repository = "https://github.com/sivang/bedsheet"
Issues = "https://github.com/sivang/bedsheet/issues"

[project.scripts]
bedsheet = "bedsheet.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["bedsheet"]
exclude = [
    "**/node_modules/**",
    "**/.git/**",
    "**/__pycache__/**",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "**/node_modules/**",
    "**/.git/**",
    "**/__pycache__/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "examples/investment-advisor",
]
