[project]
name = "investment-advisor"
version = "0.2.0"
description = "Investment Advisor - Multi-Agent System with REAL DATA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "google-adk>=0.3.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "yfinance>=0.2.40",
    "ddgs>=6.0.0",
]
