[project]
name = "investment-advisor"
version = "0.1.0"
description = "A Bedsheet agent deployment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "anthropic>=0.18.0",
    "bedsheet>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"